--- a/koalabaer.html
+++ b/koalabaer.html
@@ -30,11 +30,11 @@
 <header>
   <a href="index.html"><img alt="Logo" class="logo" src="img/Logo.png"></a>
   <h1 class="titel">Koalabär</h1>
-  <img src="img\Koalabaer.jpg" alt="Koalabär" class="toppic">
+  <img src="img/Koalabaer.jpg" alt="Koalabär" class="toppic">
 
 </header>
 <div class="left1">
-  <img src="img\Koalabaer2.jpg" alt="Koalabär2" class="leftpic">
+  <img src="img/Koalabaer2.jpg" alt="Koalabär2" class="leftpic">
 </div>
 <div class="container">
   <div class="section ">
