--- a/Emu.html
+++ b/Emu.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,10 +30,10 @@
 <header>
   <a href="index.html"><img src="img/Logo.png" class="logo" alt="Logo"></a>
   <h1 class="titel">Emu</h1>
-  <img src="img\emu2.jpg" alt="Emu2" class="toppic">
+  <img src="img/emu2.jpg" alt="Emu2" class="toppic">
 </header>
 <div class="left1">
-  <img src="img\emu.jpg" alt="Emu" class="leftpic">
+  <img src="img/emu.jpg" alt="Emu" class="leftpic">
 </div>
 <div class="container">
   <div class="section ">
