--- a/Kaenguru.html
+++ b/Kaenguru.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="de" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,10 +30,10 @@
 <header>
   <a href="index.html"><img src="img/Logo.png" class="logo" alt="Logo"></a>
   <h1 class="titel">Känguru</h1>
-  <img src="img\Kaenguru2.jpg" alt="Känguru2" class="toppic">
+  <img src="img/Kaenguru2.jpg" alt="Känguru2" class="toppic">
 </header>
 <div class="left1">
-  <img src="img\Kaenguru.jpg" alt="Känguru" class="leftpic">
+  <img src="img/Kaenguru.jpg" alt="Känguru" class="leftpic">
 </div>
 <div class="container">
   <div class="section">
